# my-agent

./: .env.example  .gitignore  README.md  build.spec  install.sh  pyproject.toml  run.py  test_image.py  webfetch.py
.claude/: hooks.json.example  settings.local.json
.github/workflows/: release.yml
my_project/: test.py
src/: config.py
src/my_agent/: __init__.py  cli.py  commands.py  highlight.py  image.py  input.py  permissions.py  plan_mode.py  plan_ui.py  project_instructions.py  setup_wizard.py  task_manager.py  ui.py
src/my_agent/hooks/: __init__.py  config.py
src/my_agent/mcp/: __init__.py  config.py  server.py
src/my_agent/mcp/tools/: __init__.py  bash.py  file_tools.py  search_tools.py  task_tools.py  web_tools.py
src/my_agent/skills/: __init__.py  config.py  manager.py
