[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-agent"
version = "1.0.0"
description = "Claude Agent SDK Interactive CLI Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "claude-agent-sdk",
    "anyio",
    "prompt_toolkit>=3.0.0",
    "pygments>=2.0.0",
    "python-dotenv",
    "pyyaml",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0.0"]

[project.scripts]
my_claude = "my_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/my_agent"]

[tool.hatch.metadata]
allow-direct-references = true